# ethernet_rfid_reader

./: .gitignore
firmware/: .clang-format  .mxproject  CMakeLists.txt  f103c8_ether_rfid.ioc
firmware/App/: CMakeLists.txt
firmware/App/Drivers/enc28j60/: CMakeLists.txt  enc28j60.c  enc28j60.h
firmware/App/Inc/: app.h  eth.h  lwipopts.h
firmware/App/Inc/arch/: cc.h
firmware/App/Src/: app.c  eth.c
firmware/Core/Inc/: main.h  stm32f1xx_it.h
firmware/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
firmware/cmake/stm32cubemx/: CMakeLists.txt
hardware/: ethernet_rfid_reader.kicad_pcb  ethernet_rfid_reader.kicad_prl  ethernet_rfid_reader.kicad_pro  ethernet_rfid_reader.kicad_sch  fp-info-cache
hardware/jlcpcb/: project.db
hardware/jlcpcb/production_files/: BOM-ethernet_rfid_reader.csv  CPL-ethernet_rfid_reader.csv
